--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,8 @@
 	--color-main: #1e3a8a;
 	--color-metal: #ddebf6;
 	--color-accent: #277ed2;
-	--color-white: #FFFFFF;
+	--color-white: #ffffff;
+	--color-dark: #000000;
 
 	--color-outline: var(--color-main);
 
