--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -58,6 +58,7 @@ h6,
 h2,
 .h2 {
 	@include fluid-text(48, 20);
+	font-weight: 600;
 }
 
 h3,
@@ -90,7 +91,7 @@ a {
 
 p {
 	font-weight: 600;
-	line-height: auto;
+	line-height: 1.3;
 }
 
 ::-webkit-scrollbar {
