--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@
 	--color-accent: #277ed2;
 	--color-white: #ffffff;
 	--color-dark: #000000;
+	--color-success: #0D9488;
 
 	--color-outline: var(--color-main);
 
