--- a/src/components/history/History.scss
+++ b/src/components/history/History.scss
@@ -1,4 +1,5 @@
 .history {
+	position: relative;
 	&__list {
 		flex-wrap: wrap;
 		gap: fluid(65, 25);
@@ -9,6 +10,37 @@
 		&-item {
 			max-width: 400px;
 			width: 100%;
+		}
+	}
+
+	&__textbox {
+		display: flex;
+		flex-direction: column;
+		row-gap: fluid(15, 10);
+		max-width: 70%;
+
+		@include mobile {
+			max-width: 100%;
+		}
+	}
+
+	&__buttons {
+		display: flex;
+		align-items: center;
+		margin-top: fluid(20, 10);
+		gap: fluid(20, 15);
+		@include mobile {
+			flex-direction: column;
+			align-items: flex-start;
+		}
+	}
+
+	&__button {
+		padding: 0;
+		&-link {
+			padding-block: 5px;
+			display: block;
+			height: 100%;
 		}
 	}
 }
